feat: consolidated discord bots (dad-bot and justthetip) into main discord-bot, implemented resource limits and memory leak fixes

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -210,14 +210,22 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
               </svg>
             </button>
-            <div class="absolute top-full left-0 mt-2 w-56 bg-[#161b22] border border-[#30363d] rounded-lg shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all z-50">
-              <a href="/tools/justthetip.html" class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">JustTheTip</a>
-              <a href="/tools/suslink.html" class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">SusLink</a>
-              <a href="/tools/collectclock.html" class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">CollectClock</a>
-              <a href="/tools/freespinscan.html" class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">FreeSpinScan</a>
-              <a href="/tools/tiltcheck-core.html" class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">TiltCheck Core</a>
-              <a href="/tools/qualifyfirst.html" class="block px-4 py-3 text-gray-400 hover:text-[#00ffaa] hover:bg-[#0d1117]">QualifyFirst (Soon)</a>
-              <a href="/tools/daad.html" class="block px-4 py-3 text-gray-400 hover:text-[#00ffaa] hover:bg-[#0d1117]">DA&D (Soon)</a>
+            <div
+              class="absolute top-full left-0 mt-2 w-56 bg-[#161b22] border border-[#30363d] rounded-lg shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all z-50">
+              <a href="/tools/justthetip.html"
+                class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">JustTheTip</a>
+              <a href="/tools/suslink.html"
+                class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">SusLink</a>
+              <a href="/tools/collectclock.html"
+                class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">CollectClock</a>
+              <a href="/tools/freespinscan.html"
+                class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">FreeSpinScan</a>
+              <a href="/tools/tiltcheck-core.html"
+                class="block px-4 py-3 text-gray-300 hover:text-[#00ffaa] hover:bg-[#0d1117]">TiltCheck Core</a>
+              <a href="/tools/qualifyfirst.html"
+                class="block px-4 py-3 text-gray-400 hover:text-[#00ffaa] hover:bg-[#0d1117]">QualifyFirst (Soon)</a>
+              <a href="/tools/daad.html"
+                class="block px-4 py-3 text-gray-400 hover:text-[#00ffaa] hover:bg-[#0d1117]">DA&D (Soon)</a>
             </div>
           </div>
           <a href="/casinos.html" class="text-gray-300 hover:text-[#00ffaa] transition-colors">Casinos</a>
@@ -226,12 +234,15 @@
         </nav>
         <!-- CTA + Mobile Menu Button -->
         <div class="flex items-center gap-3">
-          <button id="theme-toggle" class="hidden sm:block text-gray-300 hover:text-[#00ffaa] p-2" aria-label="Toggle theme">
+          <button id="theme-toggle" class="hidden sm:block text-gray-300 hover:text-[#00ffaa] p-2"
+            aria-label="Toggle theme">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
             </svg>
           </button>
-          <a href="/dashboard" class="hidden sm:block bg-[#00ffaa] hover:bg-[#00e699] text-black font-semibold px-4 py-2 rounded-lg transition-colors text-sm">
+          <a href="/dashboard"
+            class="hidden sm:block bg-[#00ffaa] hover:bg-[#00e699] text-black font-semibold px-4 py-2 rounded-lg transition-colors text-sm">
             Launch App
           </a>
           <!-- Mobile menu button -->
@@ -260,7 +271,8 @@
         <a href="/casinos.html" class="block py-2 text-gray-300 hover:text-[#00ffaa]">Casinos</a>
         <a href="/trust-scores.html" class="block py-2 text-gray-300 hover:text-[#00ffaa]">Trust Scores</a>
         <a href="/dashboard" class="block py-2 text-gray-300 hover:text-[#00ffaa]">Dashboard</a>
-        <a href="/dashboard" class="block w-full text-center bg-[#00ffaa] text-black font-semibold px-4 py-3 rounded-lg mt-4">
+        <a href="/dashboard"
+          class="block w-full text-center bg-[#00ffaa] text-black font-semibold px-4 py-3 rounded-lg mt-4">
           Launch App
         </a>
       </div>
@@ -274,13 +286,17 @@
       <div class="max-w-4xl mx-auto">
         <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">The Degen Transparency Layer</h1>
         <p class="text-xl text-gray-400 mb-10 max-w-2xl mx-auto">
-          Tools, trust engines, predictions, and safety systems that make degen communities smarter, safer, and actually fun again.
+          Tools, trust engines, predictions, and safety systems that make degen communities smarter, safer, and actually
+          fun again.
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
-          <a href="/dashboard" class="bg-[#00ffaa] hover:bg-[#00e699] text-black font-bold px-8 py-4 rounded-xl text-lg transition-colors">
+          <a href="/dashboard"
+            class="bg-[#00ffaa] hover:bg-[#00e699] text-black font-bold px-8 py-4 rounded-xl text-lg transition-colors">
             Launch TiltCheck
           </a>
-          <a href="https://discord.gg/s6NNfPHxMS" class="border border-[#00ffaa] text-[#00ffaa] hover:bg-[#00ffaa]/10 font-semibold px-8 py-4 rounded-xl text-lg transition-colors" target="_blank" rel="noopener">
+          <a href="https://discord.gg/s6NNfPHxMS"
+            class="border border-[#00ffaa] text-[#00ffaa] hover:bg-[#00ffaa]/10 font-semibold px-8 py-4 rounded-xl text-lg transition-colors"
+            target="_blank" rel="noopener">
             Join Discord
           </a>
         </div>
@@ -291,56 +307,75 @@
     <section id="tools" class="py-20 bg-[#0a0a0a]">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-3xl md:text-4xl font-bold text-white text-center mb-4">The Tools</h2>
-        <p class="text-gray-400 text-center mb-12 max-w-2xl mx-auto">Smart tools for casino communities. Scam detection, tipping, bonuses, tilt prevention, and trivia — all in Discord.</p>
+        <p class="text-gray-400 text-center mb-12 max-w-2xl mx-auto">Smart tools for casino communities. Scam detection,
+          tipping, bonuses, tilt prevention, and trivia — all in Discord.</p>
+
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
 
-          <a href="/tools/justthetip.html" class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 hover:border-[#00ffaa] transition-all duration-300 hover:-translate-y-1">
+          <a href="/tools/justthetip.html"
+            class="group bg-[#161b22]/40 backdrop-blur-md border border-[#30363d] rounded-xl p-6 hover:border-[#00ffaa] transition-all duration-300 hover:-translate-y-2 hover:shadow-[0_10px_30px_rgba(0,255,170,0.15)]">
             <div class="mb-4">
               <img class="w-14 h-14" src="/assets/icons/just-the-tip.svg" alt="JustTheTip icon">
             </div>
             <h3 class="text-xl font-semibold text-white group-hover:text-[#00ffaa] transition-colors">JustTheTip</h3>
-            <p class="text-gray-400 text-sm mt-2 mb-4">Non-custodial Solana tipping, airdrops, and swaps. Flat fee. No balance custody.</p>
-            <span class="inline-block bg-[#00ffaa]/20 text-[#00ffaa] text-xs font-medium px-3 py-1 rounded-full">Live</span>
+            <p class="text-gray-400 text-sm mt-2 mb-4">Non-custodial Solana tipping, airdrops, and swaps. Flat fee. No
+              balance custody.</p>
+            <span
+              class="inline-block bg-[#00ffaa]/20 text-[#00ffaa] text-xs font-medium px-3 py-1 rounded-full pulse-primary">Live</span>
           </a>
 
-          <a href="/tools/suslink.html" class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 hover:border-[#00ffaa] transition-all duration-300 hover:-translate-y-1">
+          <a href="/tools/suslink.html"
+            class="group bg-[#161b22]/40 backdrop-blur-md border border-[#30363d] rounded-xl p-6 hover:border-[#00ffaa] transition-all duration-300 hover:-translate-y-2 hover:shadow-[0_10px_30px_rgba(0,255,170,0.15)]">
             <div class="mb-4">
               <img class="w-14 h-14" src="/assets/icons/sus-link.svg" alt="SusLink icon">
             </div>
             <h3 class="text-xl font-semibold text-white group-hover:text-[#00ffaa] transition-colors">SusLink</h3>
-            <p class="text-gray-400 text-sm mt-2 mb-4">AI-powered link scanner that detects scam sites, redirects, and impersonation.</p>
-            <span class="inline-block bg-[#00ffaa]/20 text-[#00ffaa] text-xs font-medium px-3 py-1 rounded-full">Live</span>
+            <p class="text-gray-400 text-sm mt-2 mb-4">AI-powered link scanner that detects scam sites, redirects, and
+              impersonation.</p>
+            <span
+              class="inline-block bg-[#00ffaa]/20 text-[#00ffaa] text-xs font-medium px-3 py-1 rounded-full">Live</span>
           </a>
 
-          <a href="/tools/collectclock.html" class="group bg-[#161b22] border-2 border-dashed border-purple-500/50 rounded-xl p-6 hover:border-purple-400 transition-all duration-300 hover:-translate-y-1">
+          <a href="/tools/collectclock.html"
+            class="group bg-[#161b22]/40 backdrop-blur-md border-2 border-dashed border-purple-500/50 rounded-xl p-6 hover:border-purple-400 transition-all duration-300 hover:-translate-y-2 hover:shadow-[0_10px_30px_rgba(168,85,247,0.15)]">
             <div class="mb-4">
               <img class="w-14 h-14" src="/assets/icons/collect-clock.svg" alt="CollectClock icon">
             </div>
             <h3 class="text-xl font-semibold text-white group-hover:text-purple-400 transition-colors">CollectClock</h3>
-            <p class="text-gray-400 text-sm mt-2 mb-4">Daily bonus tracker with nerf detection and bonus cycle prediction.</p>
-            <span class="inline-block bg-purple-500/20 text-purple-400 text-xs font-medium px-3 py-1 rounded-full">Beta</span>
+            <p class="text-gray-400 text-sm mt-2 mb-4">Daily bonus tracker with nerf detection and bonus cycle
+              prediction.</p>
+            <span
+              class="inline-block bg-purple-500/20 text-purple-400 text-xs font-medium px-3 py-1 rounded-full">Beta</span>
           </a>
 
-          <a href="/tools/freespinscan.html" class="group bg-[#161b22] border-2 border-dashed border-purple-500/50 rounded-xl p-6 hover:border-purple-400 transition-all duration-300 hover:-translate-y-1">
+          <a href="/tools/freespinscan.html"
+            class="group bg-[#161b22]/40 backdrop-blur-md border-2 border-dashed border-purple-500/50 rounded-xl p-6 hover:border-purple-400 transition-all duration-300 hover:-translate-y-2 hover:shadow-[0_10px_30px_rgba(168,85,247,0.15)]">
             <div class="mb-4">
               <img class="w-14 h-14" src="/assets/icons/freespin-scan.svg" alt="FreeSpinScan icon">
             </div>
             <h3 class="text-xl font-semibold text-white group-hover:text-purple-400 transition-colors">FreeSpinScan</h3>
-            <p class="text-gray-400 text-sm mt-2 mb-4">Promo submission system with auto-classification and prediction engine.</p>
-            <span class="inline-block bg-purple-500/20 text-purple-400 text-xs font-medium px-3 py-1 rounded-full">Beta</span>
+            <p class="text-gray-400 text-sm mt-2 mb-4">Promo submission system with auto-classification and prediction
+              engine.</p>
+            <span
+              class="inline-block bg-purple-500/20 text-purple-400 text-xs font-medium px-3 py-1 rounded-full">Beta</span>
           </a>
 
-          <a href="/tools/tiltcheck-core.html" class="group bg-[#161b22] border-2 border-dashed border-purple-500/50 rounded-xl p-6 hover:border-purple-400 transition-all duration-300 hover:-translate-y-1">
+          <a href="/tools/tiltcheck-core.html"
+            class="group bg-[#161b22]/40 backdrop-blur-md border-2 border-dashed border-purple-500/50 rounded-xl p-6 hover:border-purple-400 transition-all duration-300 hover:-translate-y-2 hover:shadow-[0_10px_30px_rgba(168,85,247,0.15)]">
             <div class="mb-4">
               <img class="w-14 h-14" src="/assets/icons/tilt-engine.svg" alt="TiltCheck Core icon">
             </div>
-            <h3 class="text-xl font-semibold text-white group-hover:text-purple-400 transition-colors">TiltCheck Core</h3>
+            <h3 class="text-xl font-semibold text-white group-hover:text-purple-400 transition-colors">TiltCheck Core
+            </h3>
             <p class="text-gray-400 text-sm mt-2 mb-4">Behavior analysis, cooldown nudges, and accountability tools.</p>
-            <span class="inline-block bg-purple-500/20 text-purple-400 text-xs font-medium px-3 py-1 rounded-full">Beta</span>
+            <span
+              class="inline-block bg-purple-500/20 text-purple-400 text-xs font-medium px-3 py-1 rounded-full">Beta</span>
           </a>
 
-          <div class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 opacity-50 cursor-not-allowed relative overflow-hidden">
+
+          <div
+            class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 opacity-50 cursor-not-allowed relative overflow-hidden">
             <div class="absolute inset-0 bg-[#0d1117]/50 flex items-center justify-center">
               <span class="bg-gray-800 text-gray-300 px-3 py-1 rounded-full text-sm font-medium">Coming Soon</span>
             </div>
@@ -351,7 +386,8 @@
             <p class="text-gray-400 text-sm mt-2 mb-4">Texas Hold'em poker directly in Discord. Play with friends.</p>
           </div>
 
-          <div class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 opacity-50 cursor-not-allowed relative overflow-hidden">
+          <div
+            class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 opacity-50 cursor-not-allowed relative overflow-hidden">
             <div class="absolute inset-0 bg-[#0d1117]/50 flex items-center justify-center">
               <span class="bg-gray-800 text-gray-300 px-3 py-1 rounded-full text-sm font-medium">Coming Soon</span>
             </div>
@@ -359,10 +395,12 @@
               <img class="w-14 h-14 grayscale" src="/assets/icons/icons-sprite.svg" alt="QualifyFirst icon">
             </div>
             <h3 class="text-xl font-semibold text-white">QualifyFirst</h3>
-            <p class="text-gray-400 text-sm mt-2 mb-4">AI survey router that pre-screens users to prevent screen-outs.</p>
+            <p class="text-gray-400 text-sm mt-2 mb-4">AI survey router that pre-screens users to prevent screen-outs.
+            </p>
           </div>
 
-          <div class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 opacity-50 cursor-not-allowed relative overflow-hidden">
+          <div
+            class="group bg-[#161b22] border border-[#30363d] rounded-xl p-6 opacity-50 cursor-not-allowed relative overflow-hidden">
             <div class="absolute inset-0 bg-[#0d1117]/50 flex items-center justify-center">
               <span class="bg-gray-800 text-gray-300 px-3 py-1 rounded-full text-sm font-medium">Coming Soon</span>
             </div>
@@ -370,7 +408,8 @@
               <img class="w-14 h-14 grayscale" src="/assets/icons/dand.svg" alt="DA&D icon">
             </div>
             <h3 class="text-xl font-semibold text-white">DA&D</h3>
-            <p class="text-gray-400 text-sm mt-2 mb-4">AI-powered Cards Against Humanity-style game for degen communities.</p>
+            <p class="text-gray-400 text-sm mt-2 mb-4">AI-powered Cards Against Humanity-style game for degen
+              communities.</p>
           </div>
 
         </div>
@@ -581,20 +620,20 @@
 
   <!-- Scripts -->
   <script>
-    // Theme switcher - uses header button
-    (function () {
-      const toggle = document.getElementById('theme-toggle');
-      if (!toggle) return;
-      let mode = 'default';
-      toggle.addEventListener('click', () => {
-        mode = mode === 'default' ? 'degen' : 'default';
-        document.documentElement.setAttribute('data-theme', mode);
-        try { localStorage.setItem('tc-theme', mode); } catch (e) { }
-      });
-      // Restore saved theme
-      const saved = localStorage.getItem('tc-theme');
-      if (saved) document.documentElement.setAttribute('data-theme', saved);
-    })();
+      // Theme switcher - uses header button
+      (function () {
+        const toggle = document.getElementById('theme-toggle');
+        if (!toggle) return;
+        let mode = 'default';
+        toggle.addEventListener('click', () => {
+          mode = mode === 'default' ? 'degen' : 'default';
+          document.documentElement.setAttribute('data-theme', mode);
+          try { localStorage.setItem('tc-theme', mode); } catch (e) { }
+        });
+        // Restore saved theme
+        const saved = localStorage.getItem('tc-theme');
+        if (saved) document.documentElement.setAttribute('data-theme', saved);
+      })();
 
     // KPI strip — values will be populated from real API data
     // TODO: Wire up to /api/stats endpoint when available
