--- a/apps/web/tools/tiltcheck-core.html
+++ b/apps/web/tools/tiltcheck-core.html
@@ -8,23 +8,27 @@
 -->
 
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TiltCheck Core - Behavior & Cooldown Engine | TiltCheck</title>
-  <meta name="description" content="Pattern recognition, cooldown nudges, and accountability signals for casino pacing—without shaming or moralizing." />
+  <meta name="description"
+    content="Pattern recognition, cooldown nudges, and accountability signals for casino pacing—without shaming or moralizing." />
   <link rel="stylesheet" href="../styles/tool-page.css" />
 </head>
+
 <body>
   <div id="shared-nav"></div>
 
+
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large"></div>
-      <h1>TiltCheck Core</h1>
+      <div class="tool-icon-large">🧠</div>
+      <h1 class="text-gradient-emerald">TiltCheck Core</h1>
       <p class="tool-tagline">Cool-down & pattern intelligence without judgment</p>
-      
-      <span class="status-badge status-beta">Beta</span>
+
+      <span class="status-badge status-beta pulse-primary">Beta</span>
     </div>
   </header>
 
@@ -33,10 +37,11 @@
       <div class="two-column">
         <div>
           <h2>What is it?</h2>
-          <p>TiltCheck Core monitors pacing signals (messages, commands, high-risk link interactions) and offers gentle cooldown nudges when patterns skew into burnout territory.</p>
+          <p>TiltCheck Core monitors pacing signals (messages, commands, high-risk link interactions) and offers gentle
+            cooldown nudges when patterns skew into burnout territory.</p>
           <p>No lectures. No policing. Opt-in accountability you can tune to your tolerance.</p>
         </div>
-        <div class="feature-box">
+        <div class="feature-box glass-card">
           <h3>Key Features</h3>
           <ul>
             <li> Session pacing model</li>
@@ -50,6 +55,7 @@
       </div>
     </div>
   </section>
+
 
   <section class="commands-section">
     <div class="container">
@@ -83,10 +89,34 @@
     <div class="container">
       <h2>Flow</h2>
       <div class="steps">
-        <div class="step"><div class="step-number">1</div><div class="step-content"><h3>Capture signals</h3><p>Message cadence, tool usage, risk actions.</p></div></div>
-        <div class="step"><div class="step-number">2</div><div class="step-content"><h3>Score session</h3><p>Pacing algorithm updates tilt probability index.</p></div></div>
-        <div class="step"><div class="step-number">3</div><div class="step-content"><h3>Nudge gently</h3><p>Cooldown suggestion if thresholds crossed.</p></div></div>
-        <div class="step"><div class="step-number">4</div><div class="step-content"><h3>Optional escalation</h3><p>Buddy notified (if opted-in) for supportive check-in.</p></div></div>
+        <div class="step">
+          <div class="step-number">1</div>
+          <div class="step-content">
+            <h3>Capture signals</h3>
+            <p>Message cadence, tool usage, risk actions.</p>
+          </div>
+        </div>
+        <div class="step">
+          <div class="step-number">2</div>
+          <div class="step-content">
+            <h3>Score session</h3>
+            <p>Pacing algorithm updates tilt probability index.</p>
+          </div>
+        </div>
+        <div class="step">
+          <div class="step-number">3</div>
+          <div class="step-content">
+            <h3>Nudge gently</h3>
+            <p>Cooldown suggestion if thresholds crossed.</p>
+          </div>
+        </div>
+        <div class="step">
+          <div class="step-number">4</div>
+          <div class="step-content">
+            <h3>Optional escalation</h3>
+            <p>Buddy notified (if opted-in) for supportive check-in.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -95,12 +125,30 @@
     <div class="container">
       <h2>Technical Details</h2>
       <div class="tech-grid">
-        <div class="tech-item"><h4>Scoring</h4><p>Weighted event decay + burst detection</p></div>
-        <div class="tech-item"><h4>Privacy</h4><p>Local aggregates; no external profiling</p></div>
-        <div class="tech-item"><h4>Buddy Channel</h4><p>DM or private thread dispatch</p></div>
-        <div class="tech-item"><h4>Nudge Style</h4><p>Neutral language / optional cooldown timers</p></div>
-        <div class="tech-item"><h4>Config</h4><p>User-level JSON settings</p></div>
-        <div class="tech-item"><h4>Status</h4><p>Beta—threshold recalibration ongoing</p></div>
+        <div class="tech-item">
+          <h4>Scoring</h4>
+          <p>Weighted event decay + burst detection</p>
+        </div>
+        <div class="tech-item">
+          <h4>Privacy</h4>
+          <p>Local aggregates; no external profiling</p>
+        </div>
+        <div class="tech-item">
+          <h4>Buddy Channel</h4>
+          <p>DM or private thread dispatch</p>
+        </div>
+        <div class="tech-item">
+          <h4>Nudge Style</h4>
+          <p>Neutral language / optional cooldown timers</p>
+        </div>
+        <div class="tech-item">
+          <h4>Config</h4>
+          <p>User-level JSON settings</p>
+        </div>
+        <div class="tech-item">
+          <h4>Status</h4>
+          <p>Beta—threshold recalibration ongoing</p>
+        </div>
       </div>
     </div>
   </section>
@@ -116,4 +164,5 @@
   <div id="shared-footer"></div>
 </body>
 <script src="/scripts/components-loader.js"></script>
+
 </html>
